--- a/all.css
+++ b/all.css
@@ -119,6 +119,15 @@
     max-width: 95%;
     height: auto;
 }
+.equation {
+    font-size: 40px;
+    margin: 40px;
+    text-align: center;
+}
+.h3 {
+    margin-left: 20px;
+    font-size: 24px;
+}
 .lowerbox{
     background-color: darkslategray;
     padding: 0;
