--- a/all.css
+++ b/all.css
@@ -82,6 +82,88 @@
     color: rgb(31, 31, 149);
     margin-left: 20px;
 }
+.indexpic{
+    padding: 0;
+    margin: 0;
+    overflow-x: hidden !important;
+    width: 100%;
+    height: 800px;
+    background-size: cover;
+    background-image: linear-gradient(to top, rgba(255, 255, 255, 1), rgba(255, 255, 255, 0) 60%), url(indexpic.jpg);
+    background-position: 50%;
+    border-radius: 8px;
+}
+.indexpicblur{
+    background: rgba(255,255, 255, 0.1);
+    backdrop-filter: blur(1px);
+    width: 100%;
+    height: fit-content;
+    min-height: 100px;
+    position: relative;
+    text-align: center;
+    margin: 0 auto;
+}
+.indexpicfont{
+    font-size: clamp(1.875rem, 1.534rem + 1.7vw, 2.813rem);
+    user-select: none;
+    color: white;
+    font-weight: 550;
+    text-align: center;
+    margin-top: 10%;
+    padding: 30px;
+}
+.indexdaohangsheet{
+    background-color: white;
+    width: 30%;
+    height: 500px;
+    padding: 20px;
+    position: relative;
+    padding-top: 10px;
+    box-shadow: 0 15px 25px rgba(0,0,0,0.1);
+    top: -50px;
+}
+.indexbody{
+    background-color: white;
+    padding: 0;
+    margin: 0;
+    height: fit-content;
+    width: 100%;
+    border-radius: 8px;
+    border: solid rgba(180, 178, 178, 0.5) 1px;
+}
+.indexdaohang{
+    float:right;
+    align-items: center;
+    text-align: left;
+    height: 60px;
+    margin: 0;
+    padding: 0;
+    background-color: white;
+    border-color: transparent;
+    width: 100%;
+    left: 0;
+    right: 0;
+    display: block;
+    font-size: 20px;
+}
+.indexdaohangheadfont{
+    margin-left: 30px;
+}
+.indexpreface{
+    background-color: rgb(11, 11, 62, 0.8);
+    height: fit-content;
+    width: 30%;
+    position: relative;
+    padding: 20px;
+    padding-top: 10px;
+}
+.indexprefaceheadfont{
+    color: white;
+}
+.indexprefacefont{
+    color: white;
+    line-height: 30px;
+}
 .daohangbelow{
     float:right;
     align-items: center;
@@ -174,6 +256,12 @@
 .purple {
     background-color: violet;
 }
+.flex{
+    display: flex;
+}
+.indexleftrightmargin{
+    width: 20%;
+}
 @media (max-width:850px) {
 .left {
     display: none;
@@ -216,5 +304,55 @@
     line-height: 40px;
     text-align: center;
     font-size:clamp(1rem, 0.489rem + 10.5vw, 1.2rem);
+}
+.indexpic{
+    margin: 0;
+    padding: 0;
+    height: 300px;
+}
+}
+@media (max-width:800px) {
+.indexdaohangsheet{
+    background-color: white;
+    height: 500px;
+    width: 50%;
+    padding: 20px;
+    position: relative;
+    padding-top: 10px;
+    box-shadow: 0 15px 25px rgba(0,0,0,0.1);
+    top: -50px;
+    margin: 0;
+    }
+.indexleftrightmargin{
+    width: 0;
+}
+.indexpreface{
+    background-color: rgb(11, 11, 62, 0.8);
+    height: fit-content;
+    position: relative;
+    padding: 20px;
+    width: 50%;
+    padding-top: 10px;
+    margin: 0;
+}
+}
+@media (max-width:550px) {
+.column{
+    flex-direction: column;
+}
+.indexdaohangsheet{
+    width: 100%;
+    box-sizing: border-box;
+    box-shadow: none;
+    top: 0;
+}
+.indexpreface{
+    width: 100%;
+    box-sizing: border-box;
+}
+}
+@media (max-width:450px) {
+.indexpicblur{
+    top: 50px;
 }
 }
