--- a/all.css
+++ b/all.css
@@ -1,3 +1,4 @@
+/* 子页面div分区 */
 .upbox {
     background-color: skyblue;
     padding: 0;
@@ -50,6 +51,7 @@
     margin-left: 40px;
     margin-top: 40px;
 }
+/* 猪蛋飞行 */
 .headtext{
     position: relative;
     margin-left: 200px;
@@ -59,6 +61,7 @@
     user-select: none;
     top: 10px;
 }
+/* 子页面按钮 */
 .daohang{
     float:right;
     align-items: center;
@@ -82,6 +85,7 @@
     color: rgb(31, 31, 149);
     margin-left: 20px;
 }
+/* 猪蛋icon */
 .indexpic{
     padding: 0;
     margin: 0;
@@ -93,6 +97,7 @@
     background-position: 50%;
     border-radius: 8px;
 }
+/* 主页图片 */
 .indexpicblur{
     background: rgba(255,255, 255, 0.1);
     backdrop-filter: blur(1px);
@@ -112,6 +117,7 @@
     margin-top: 10%;
     padding: 30px;
 }
+/* 主页布局 */
 .indexdaohangsheet{
     background-color: white;
     width: 30%;
@@ -131,6 +137,7 @@
     border-radius: 8px;
     border: solid rgba(180, 178, 178, 0.5) 1px;
 }
+/* 主页按钮 */
 .indexdaohang{
     float:right;
     align-items: center;
@@ -180,6 +187,7 @@
     border-bottom: solid rgba(180, 178, 178, 0.5) 1px;
     font-size: 20px;
 }
+/* 按钮 */
 .hover:hover {
     color: rgb(7, 7, 110);
 }
@@ -199,7 +207,19 @@
 }
 .textpic {
     max-width: 95%;
+    text-align: center;
     height: auto;
+    border: 2px;
+    border-color: black;
+    border-style: double;
+}
+.picdiv{
+    text-align: center;
+}
+.pictext{
+    margin: 20px;
+    font-size: 20px;
+    text-align: center;
 }
 .equation {
         width: 100%;
@@ -209,9 +229,22 @@
         text-align: center;
         font-size: 40px;
 }
+.h2{
+    margin-left:40px ;
+    font-size: 25px;
+}
 .h3 {
-    margin-left: 20px;
+    margin-left: 80px;
     font-size: 20px;
+}
+.h1text{
+    margin-left: 20px;
+}
+.h2text{
+    margin-left: 45px;
+}
+.h3text{
+   margin-left: 120px;
 }
 .lowerbox{
     background-color: darkslategray;
@@ -268,21 +301,36 @@
 }
 .table {
     margin: 20px;
-    margin-right: 80px;
+    margin-left: auto;
+    margin-right: auto;
     font-size: 20px;
     text-align: center;
+}
+.tabler2{
+    max-width: 600px;
+}
+.tablemp{
+    max-width: 900px;
 }
 .tdleft {
     text-align: left;
     padding: 10px;
 }
+.svgdiv {
+    margin: 5px;
+    height: 400PX;
+    width: auto;
+    margin-left: auto;
+    margin-right: auto;
+}
+.svgborder{
+    border: 1px;
+    border-color: black;
+    border-style: double;
+}
 @media (max-width:850px) {
 .left {
     display: none;
-}
-.text {
-    margin-right: 20px;
-    margin-left: 20px;
 }
 .table {
     margin: 20px;
@@ -355,6 +403,9 @@
 .table{
     font-size: 15px;
 }
+.h2{
+    margin-left: 20px;
+}
 }
 @media (max-width:550px) {
 .column{
@@ -372,6 +423,22 @@
 }
 .table{
     font-size: 10px;
+}
+.h3{
+    margin-left: 20px;
+}
+.h3text{
+    margin-left: 30px;
+    margin-right: 30px;
+    font-size: 17px;
+}
+.h2text{
+    margin-left: 20px;
+    margin-right: 20px;
+}
+.h1text{
+    margin-left: 15px;
+    margin-right: 15px;
 }
 }
 @media (max-width:450px) {
