--- a/all.css
+++ b/all.css
@@ -326,7 +326,7 @@
 }
 .svgdiv {
     margin: 5px;
-    height: 400PX;
+    height: auto;
     width: auto;
     margin-left: auto;
     margin-right: auto;
