--- a/all.css
+++ b/all.css
@@ -7,7 +7,8 @@
     height: 30px;
     margin-top: 30px;
 }
-.mainhead{
+
+.mainhead {
     background-color: 0;
     padding: 0;
     margin: 0;
@@ -15,9 +16,10 @@
     border-bottom-left-radius: 8px;
     border-bottom-right-radius: 8px;
     border: solid rgba(180, 178, 178, 0.5) 1px;
-    
+
 }
-.body{
+
+.body {
     background-color: white;
     padding: 0;
     margin: 0;
@@ -27,6 +29,7 @@
     border: solid rgba(180, 178, 178, 0.5) 1px;
     display: flex;
 }
+
 .left {
     margin-left: 80px;
     width: auto fit-content;
@@ -36,9 +39,10 @@
     flex: 1;
     max-width: 310px;
 }
-.right{
+
+.right {
     margin-left: 20px;
-    display:flex;
+    display: flex;
     flex-direction: column;
     flex: 1;
     position: relative;
@@ -51,8 +55,9 @@
     margin-left: 40px;
     margin-top: 40px;
 }
+
 /* 猪蛋飞行 */
-.headtext{
+.headtext {
     position: relative;
     margin-left: 200px;
     padding: 0;
@@ -61,9 +66,10 @@
     user-select: none;
     top: 10px;
 }
+
 /* 子页面按钮 */
-.daohang{
-    float:right;
+.daohang {
+    float: right;
     align-items: center;
     text-align: left;
     height: 60px;
@@ -79,14 +85,16 @@
     font-size: 20px;
     border-top: solid rgba(180, 178, 178, 0.5) 1px;
 }
+
 .daohangbutton {
     text-decoration: none;
     display: block;
     color: rgb(31, 31, 149);
     margin-left: 20px;
 }
+
 /* 猪蛋icon */
-.indexpic{
+.indexpic {
     padding: 0;
     margin: 0;
     overflow-x: hidden !important;
@@ -97,9 +105,10 @@
     background-position: 50%;
     border-radius: 8px;
 }
+
 /* 主页图片 */
-.indexpicblur{
-    background: rgba(255,255, 255, 0.1);
+.indexpicblur {
+    background: rgba(255, 255, 255, 0.1);
     backdrop-filter: blur(1px);
     width: 100%;
     height: fit-content;
@@ -108,7 +117,8 @@
     text-align: center;
     margin: 0 auto;
 }
-.indexpicfont{
+
+.indexpicfont {
     font-size: clamp(1.875rem, 1.534rem + 1.7vw, 2.813rem);
     user-select: none;
     color: white;
@@ -117,18 +127,20 @@
     margin-top: 10%;
     padding: 30px;
 }
+
 /* 主页布局 */
-.indexdaohangsheet{
+.indexdaohangsheet {
     background-color: white;
     width: 30%;
     height: 500px;
     padding: 20px;
     position: relative;
     padding-top: 10px;
-    box-shadow: 0 15px 25px rgba(0,0,0,0.1);
+    box-shadow: 0 15px 25px rgba(0, 0, 0, 0.1);
     top: -50px;
 }
-.indexbody{
+
+.indexbody {
     background-color: white;
     padding: 0;
     margin: 0;
@@ -137,9 +149,10 @@
     border-radius: 8px;
     border: solid rgba(180, 178, 178, 0.5) 1px;
 }
+
 /* 主页按钮 */
-.indexdaohang{
-    float:right;
+.indexdaohang {
+    float: right;
     align-items: center;
     text-align: left;
     height: 60px;
@@ -153,10 +166,12 @@
     display: block;
     font-size: 20px;
 }
-.indexdaohangheadfont{
+
+.indexdaohangheadfont {
     margin-left: 30px;
 }
-.indexpreface{
+
+.indexpreface {
     background-color: rgb(11, 11, 62, 0.8);
     height: fit-content;
     width: 30%;
@@ -164,15 +179,18 @@
     padding: 20px;
     padding-top: 10px;
 }
-.indexprefaceheadfont{
+
+.indexprefaceheadfont {
     color: white;
 }
-.indexprefacefont{
+
+.indexprefacefont {
     color: white;
     line-height: 30px;
 }
-.daohangbelow{
-    float:right;
+
+.daohangbelow {
+    float: right;
     align-items: center;
     text-align: left;
     height: 60px;
@@ -187,24 +205,29 @@
     border-bottom: solid rgba(180, 178, 178, 0.5) 1px;
     font-size: 20px;
 }
+
 /* 按钮 */
 .hover:hover {
     color: rgb(7, 7, 110);
 }
+
 .text {
     margin-left: 20px;
     margin-right: 80px;
     font-size: 20px;
 }
-.smalltext{
+
+.smalltext {
     margin-left: 40px;
     margin-right: 40px;
     font-size: 19px;
 }
+
 .texthead {
     margin: 0;
     font-weight: 600;
 }
+
 .textpic {
     max-width: 95%;
     text-align: center;
@@ -213,53 +236,68 @@
     border-color: black;
     border-style: double;
 }
-.picdiv{
+
+.picdiv {
     text-align: center;
 }
-.pictext{
+
+.pictext {
     margin: 20px;
     font-size: 20px;
     text-align: center;
 }
+
 .equation {
-        width: 100%;
-        height: auto;
-        margin: 0;
-        line-height: 40px;
-        text-align: center;
-        font-size: 40px;
+    width: 100%;
+    height: auto;
+    margin: 0;
+    line-height: 40px;
+    text-align: center;
+    font-size: 40px;
 }
-.h2{
-    margin-left:40px ;
+
+.h2 {
+    margin-left: 40px;
     font-size: 25px;
 }
+
 .h3 {
     margin-left: 80px;
     font-size: 20px;
 }
-.h1text{
+
+.h1text {
     margin-left: 20px;
 }
-.h2text{
+
+.h2text {
     margin-left: 45px;
 }
-.h3text{
-   margin-left: 120px;
+
+.h3text {
+    margin-left: 120px;
 }
-.lowerbox{
+
+.h4text {
+    margin-left: 130px;
+}
+
+.lowerbox {
     background-color: darkslategray;
     padding: 0;
     margin: 0;
     right: 0;
     height: 350px;
 }
-.bottombox{
+
+.bottombox {
     background-color: skyblue;
     padding: 0;
     margin: 0;
     right: 0;
     height: 120px;
 }
+
 .headpic {
     display: flex;
     border: 0;
@@ -268,45 +306,55 @@
     position: absolute;
     text-align: center;
     margin-left: 100px;
-    top:90px;
+    top: 90px;
     overflow: hidden;
 }
+
 .blankbox {
     height: 200px;
     margin: 0;
     padding: 0;
     right: 0;
 }
+
 .red {
     background-color: rgb(255, 51, 0);
     color: white;
 }
-.yellow{
+
+.yellow {
     background-color: rgb(255, 204, 0);
     color: white;
 }
+
 .green {
     background-color: chartreuse;
     color: white;
 }
+
 .blue {
     background-color: aqua;
     color: white;
 }
+
 .purple {
     background-color: violet;
     color: white;
 }
-.flex{
+
+.flex {
     display: flex;
 }
-.indexleftrightmargin{
+
+.indexleftrightmargin {
     width: 20%;
 }
+
 .center {
     text-align: center;
     align-items: center;
 }
+
 .table {
     margin: 20px;
     margin-left: auto;
@@ -314,16 +362,20 @@
     font-size: 20px;
     text-align: center;
 }
-.tabler2{
+
+.tabler2 {
     max-width: 600px;
 }
-.tablemp{
+
+.tablemp {
     max-width: 900px;
 }
+
 .tdleft {
     text-align: left;
     padding: 10px;
 }
+
 .svgdiv {
     margin: 20px;
     height: auto;
@@ -332,132 +384,209 @@
     margin-left: auto;
     margin-right: auto;
 }
-.svgborder{
+
+.svgborder {
     border: 1px;
     border-color: black;
     border-style: double;
 }
+
+.unselectable {
+    -moz-user-select: -moz-none;
+    -khtml-user-select: none;
+    -webkit-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+}
+
+.audioh1 {
+    margin-left: 20px;
+}
+
+.audioh2 {
+    margin-left: 45px;
+}
+
+.audioh3 {
+    margin-left: 120px;
+}
+
+.audioh4 {
+    margin-left: 130px;
+}
+
 @media (max-width:850px) {
-.left {
-    display: none;
-}
-.table {
-    margin: 20px;
-}
-.headpic {
-    margin-left: 20px;
-    top: 60px;
-}
-.headtext {
-    margin: 0;
-    padding: 0;
-    margin-left: 100px;
-    font-size: 17px;
-    top:17px;
-}
-.textpic {
-    width: 100%;
-    height: auto;
-}
-.right {
-    margin-left: 0;
-}
-.texthead {
-    margin-left: 10px;
-}
-.upbox{
-    height: 20px;
-}
-.mainhead{
-    height: 80px;
-}
-.equation {
-    width: 100%;
-    height: auto;
-    margin: 0;
-    line-height: 40px;
-    text-align: center;
-    font-size:clamp(1rem, 0.489rem + 10.5vw, 1.2rem);
-}
-.indexpic{
-    margin: 0;
-    padding: 0;
-    height: 300px;
-}
-}
-@media (max-width:800px) {
-.indexdaohangsheet{
-    background-color: white;
-    height: 500px;
-    width: 50%;
-    padding: 20px;
-    position: relative;
-    padding-top: 10px;
-    box-shadow: 0 15px 25px rgba(0,0,0,0.1);
-    top: -50px;
-    margin: 0;
+    .left {
+        display: none;
     }
-.indexleftrightmargin{
-    width: 0;
+
+    .table {
+        margin: 20px;
+    }
+
+    .headpic {
+        margin-left: 20px;
+        top: 60px;
+    }
+
+    .headtext {
+        margin: 0;
+        padding: 0;
+        margin-left: 100px;
+        font-size: 17px;
+        top: 17px;
+    }
+
+    .textpic {
+        width: 100%;
+        height: auto;
+    }
+
+    .right {
+        margin-left: 0;
+    }
+
+    .texthead {
+        margin-left: 10px;
+    }
+
+    .upbox {
+        height: 20px;
+    }
+
+    .mainhead {
+        height: 80px;
+    }
+
+    .equation {
+        width: 100%;
+        height: auto;
+        margin: 0;
+        line-height: 40px;
+        text-align: center;
+        font-size: clamp(1rem, 0.489rem + 10.5vw, 1.2rem);
+    }
+
+    .indexpic {
+        margin: 0;
+        padding: 0;
+        height: 300px;
+    }
 }
-.indexpreface{
-    background-color: rgb(11, 11, 62, 0.8);
-    height: fit-content;
-    position: relative;
-    padding: 20px;
-    width: 50%;
-    padding-top: 10px;
-    margin: 0;
+
+@media (max-width:800px) {
+    .indexdaohangsheet {
+        background-color: white;
+        height: 500px;
+        width: 50%;
+        padding: 20px;
+        position: relative;
+        padding-top: 10px;
+        box-shadow: 0 15px 25px rgba(0, 0, 0, 0.1);
+        top: -50px;
+        margin: 0;
+    }
+
+    .indexleftrightmargin {
+        width: 0;
+    }
+
+    .indexpreface {
+        background-color: rgb(11, 11, 62, 0.8);
+        height: fit-content;
+        position: relative;
+        padding: 20px;
+        width: 50%;
+        padding-top: 10px;
+        margin: 0;
+    }
+
+    .table {
+        font-size: 15px;
+    }
+
+    .h2 {
+        margin-left: 20px;
+    }
 }
-.table{
-    font-size: 15px;
-}
-.h2{
-    margin-left: 20px;
-}
-}
+
 @media (max-width:550px) {
-.column{
-    flex-direction: column;
-}
-.indexdaohangsheet{
-    width: 100%;
-    box-sizing: border-box;
-    box-shadow: none;
-    top: 0;
-}
-.indexpreface{
-    width: 100%;
-    box-sizing: border-box;
-}
-.table{
-    font-size: 10px;
-}
-.h3{
-    margin-left: 20px;
-}
-.h3text{
-    margin-left: 30px;
-    margin-right: 30px;
-    font-size: 17px;
-}
-.h2text{
-    margin-left: 20px;
-    margin-right: 20px;
-}
-.h1text{
-    margin-left: 15px;
-    margin-right: 15px;
-}
+    .column {
+        flex-direction: column;
+    }
+
+    .indexdaohangsheet {
+        width: 100%;
+        box-sizing: border-box;
+        box-shadow: none;
+        top: 0;
+    }
+
+    .indexpreface {
+        width: 100%;
+        box-sizing: border-box;
+    }
+
+    .table {
+        font-size: 10px;
+    }
+
+    .h3 {
+        margin-left: 20px;
+    }
+
+    .h4text {
+        margin-left: 37px;
+        margin-right: 32px;
+        font-size: 15px;
+    }
+
+    .h3text {
+        margin-left: 30px;
+        margin-right: 30px;
+        font-size: 17px;
+    }
+
+    .h2text {
+        margin-left: 20px;
+        margin-right: 20px;
+    }
+
+    .h1text {
+        margin-left: 15px;
+        margin-right: 15px;
+    }
+
+    .audioh1 {
+        margin-left: auto;
+        margin-right: auto;
+    }
+    
+    .audioh2 {
+        margin-left: auto;
+        margin-right: auto;
+    }
+    
+    .audioh3 {
+        margin-left: auto;
+        margin-right: auto;
+    }
+    
+    .audioh4 {
+        margin-left: auto;
+        margin-right: auto;
+    }
 }
 @media (max-width:450px) {
-.indexpicblur{
-    top: 50px;
-}
-.table{
-    font-size: 10px;
-}
-.svgdiv {
-    min-width: 290px;
-}
+    .indexpicblur {
+        top: 50px;
+    }
+
+    .table {
+        font-size: 10px;
+    }
+
+    .svgdiv {
+        min-width: 290px;
+    }
 }
